<?xml version="1.0" encoding="utf-8"?><!-- Using TableLayout to have HTML table-like control over layout -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:stretchColumns="1"
    tools:context=".MainActivity">

    <!-- Row 1: Text label placed in column zero,
     text field placed in column two and allowed to
     span two columns. So a total of 4 columns in this row -->
    <TableRow>

        <TextView
            android:id="@+id/txtLbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLbl1" />

        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:inputType="numberDecimal" />
    </TableRow>

    <!-- Row 2: Text label placed in column zero,
     text field placed in column two and allowed to
     span two columns. So a total of 4 columns in this row -->
    <TableRow>

        <TextView
            android:id="@+id/txtLbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLbl2" />

        <EditText
            android:id="@+id/txtPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:inputType="number" />
    </TableRow>

    <!-- Row 3: This has just on text label placed in column zero -->
    <TableRow>

        <TextView
            android:id="@+id/txtLbl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textLbl3" />
    </TableRow>

    <!-- Row 4: RadioGroup for RadioButtons placed at column zero
     with column span of three, thus creating one radio button
     per cell of the table row. Last cell number 4 has the
     textfield to enter custom tip percentage-->
    <TableRow>

        <RadioGroup
            android:id="@+id/RadioGroupTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="3"
            android:checkedButton="@+id/radioFifteen"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioFifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoTxt15"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioTwenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoTxt20"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoTxtOther"
                android:textSize="15sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/txtTipOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </TableRow>

    <!-- Row for calculate and Rest buttons. The Calculate button
     is placed at column two, and Reset at column three -->
    <TableRow>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/btnReset" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/btnCalculate" />
    </TableRow>

    <!-- TableLayout allows any other views to be inserted between
     the TableRow elements. So insert a blank view to create a
     line separator. This separator view is used to separate
     the area below the buttons which will display the
     calculation results -->
    <View
        android:layout_height="2px"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:background="#000000" />

    <!-- Again TableRow is used to place the result textviews
    at column zero and the result in textviews at column two -->
    <TableRow
        android:paddingTop="5dip"
        android:paddingBottom="10dip">

        <TextView
            android:id="@+id/txtLbl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLbl4" />

        <TextView
            android:id="@+id/txtTipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:paddingTop="5dip"
        android:paddingBottom="10dip">

        <TextView
            android:id="@+id/txtLbl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLbl5" />

        <TextView
            android:id="@+id/txtTotalToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:paddingTop="5dip"
        android:paddingBottom="10dip">

        <TextView
            android:id="@+id/txtLbl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLbl6" />

        <TextView
            android:id="@+id/txtTipPerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2" />
    </TableRow>
    <!-- End of all rows and widgets -->
</TableLayout>